crates/store_app/re_dataframe/src/snapshots/re_dataframe__query__tests__view_contents_and_selection.snap
---
source: crates/store_app/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────────────┬──────────────────────────────┬──────────────────────────────┐
│ frame_nr             ┆ log_time             ┆ log_tick             ┆ /this/that:example.MyPoints: ┆ /this/that:example.MyPoints: ┆ /this/that:example.MyPoints: │
│ ---                  ┆ ---                  ┆ ---                  ┆ points                       ┆ colors                       ┆ labels                       │
│ type: Int64          ┆ type: Timestamp(ns)  ┆ type: Null           ┆ ---                          ┆ ---                          ┆ ---                          │
│ index_name: frame_nr ┆ index_name: log_time ┆ index_name: log_tick ┆ type: Null                   ┆ type: List(UInt32)           ┆ type: List(Utf8)             │
│ kind: index          ┆ kind: index          ┆ is_sorted: true      ┆ component:                   ┆ archetype: example.MyPoints  ┆ archetype: example.MyPoints  │
│                      ┆                      ┆ kind: index          ┆ example.MyPoints:points      ┆ component:                   ┆ component:                   │
│                      ┆                      ┆                      ┆ entity_path: /this/that      ┆ example.MyPoints:colors      ┆ example.MyPoints:labels      │
│                      ┆                      ┆                      ┆ kind: data                   ┆ component_type:              ┆ component_type:              │
│                      ┆                      ┆                      ┆                              ┆ example.MyColor              ┆ example.MyLabel              │
│                      ┆                      ┆                      ┆                              ┆ entity_path: /this/that      ┆ entity_path: /this/that      │
│                      ┆                      ┆                      ┆                              ┆ kind: data                   ┆ is_static: true              │
│                      ┆                      ┆                      ┆                              ┆                              ┆ kind: data                   │
╞══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════════════╪══════════════════════════════╪══════════════════════════════╡
│ 30                   ┆ null                 ┆ null                 ┆ null                         ┆ [2]                          ┆ [c]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 40                   ┆ null                 ┆ null                 ┆ null                         ┆ [3]                          ┆ [c]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 50                   ┆ null                 ┆ null                 ┆ null                         ┆ [4]                          ┆ [c]                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 70                   ┆ null                 ┆ null                 ┆ null                         ┆ [6]                          ┆ [c]                          │
└──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────────────┴──────────────────────────────┴──────────────────────────────┘
